--- a/index.html
+++ b/index.html
@@ -6055,7 +6055,7 @@ jQuery(document).ready(function($) {
 
 					<div class="tab-pane tab-content" id="about">
 						<h2>About <small>open source Pandacoin wallet</small></h2>
-						<p>Version 2.0.27</p>
+						<p>Version 2.0.28</p>
 						<p>Compatible with Pandacoin</p>
                         <p><a href="https://github.com/DigitalPandacoin/coinbin">https://github.com/DigitalPandacoin/coinbin</a></p>
 						<p>Forked from <a href="https://coinb.in">https://coinb.in"</a></p>
@@ -6660,6 +6660,7 @@ jQuery(document).ready(function($) {
 									<option value="blockchair_bitcoinmainnet"> Blockchair.com (Bitcoin mainnet)</option>
 									<option value="blockchair_litecoin"> Blockchair.com (Litecoin)</option>
 									<option value="blockcypher_dogecoin"> Blockcypher.com (Dogecoin)</option>
+									<option value="blockchair_dogecoin">Blockchair (Dogecoin)</option>
 									<option value="chain.so_bitcoinmainnet"> Chain.so (Bitcoin mainnet)</option>
 									<option value="cryptoid.info_cypherfunk"> Cryptoid.info (Cypherfunk)</option>
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
@@ -6717,7 +6718,7 @@ jQuery(document).ready(function($) {
 
 		<div id="footer">
 			<div class="container text-right">
-	        		<p class="text-muted">Version  2.0.27</p>
+	        		<p class="text-muted">Version  2.0.28</p>
 			</div>
 		</div>
 
